populator.yaml
kind: Pod
apiVersion: v1
metadata:
  # Initializes database with Sentry data and creates initial user
  name: database-populator
spec:
  containers:
    - name: database-populator
      image: sentry:9.1.2
      resources:
        limits:
          # for some reason this populator is consuming lots of memory
          cpu: 500m
          memory: 1500Mi
        requests:
          cpu: 50m
          memory: 800Mi
      volumeMounts:
        - name: config-volume
          mountPath: /etc/sentry/
      command:
          - "/bin/bash"
          - "-ecx"
          - |
            # Init migrations
            sentry upgrade --noinput
            # Create user to sentry
            sentry createuser --email ${SENTRY_INITIAL_EMAIL} --password ${SENTRY_INITIAL_PASSWORD} --superuser --no-input
      imagePullPolicy: Always
  volumes:
  - name: config-volume
    configMap:
      name: sentry
  restartPolicy: OnFailure
  terminationGracePeriodSeconds: 30
  dnsPolicy: ClusterFirst
